css: fix checkbox alignment
Checkboxes are a bit off-alignment throughout Kallithea, but floating
them left makes it noticably worse, and also seems like an odd thing
to do (checkboxes are usually rendered inline with the label).

--- a/kallithea/public/css/style.css
+++ b/kallithea/public/css/style.css
@@ -3212,7 +3212,6 @@ nav.navbar #quick li .dropdown-menu,
 }
 
 #content div.panel div.form div.form-horizontal div.form-group > div div.checkbox input {
-    float: left;
     margin: -4px 5px 0px 0px;
 }
 
